--- a/src/views/login/login.less
+++ b/src/views/login/login.less
@@ -9,8 +9,8 @@
         height: 80px;
         background-color: rgba(21, 20, 13, 0.3);
         img {
-            width: 40px;
-            height: 40px;
+            width: 65px;
+            height: 54px;
             margin: 0 8px 0 20px;
         }
         h1 {
@@ -24,7 +24,7 @@
         height: 300px;
         background: rgba(158, 205, 91, 0.4);
         padding: 20px 40px;
-        margin: 50px auto;
+        margin: 80px auto;
         border-radius: 8px;
         h2 {
             text-align: center;
@@ -33,4 +33,7 @@
             color: #fff;
         }
     }
+}
+.login-form-button{
+    width: 100%;
 }
